# hermes-backend

./: .env.docker  .gitignore  Dockerfile.api  Dockerfile.crawler  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
api/: README.md
api/app/: app.py  router.py  schemas.py
core/: README.md  database.py  models.py  settings.py
crawler/news_scrapper/: items.py  pipelines.py
crawler/news_scrapper/spiders/: g1.py  uol.py
migrations/: env.py
migrations/versions/: 38f44bdc7f6e_create_posts_table.py  8aa285320db1_cria_tabela_de_posts.py
news_scrapper/: README.md  items.py  pipelines.py  settings.py
news_scrapper/spiders/: g1.py  uol.py
tasks/: celery_app.py  tasks.py
tests/: conftest.py  test_app.py  test_db.py  test_posts.py
